<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/media"
    tools:context=".CalActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="1">

        <EditText
            android:id="@+id/edtOperator"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#ff0000"
            android:hint="@string/edtCal"
            android:inputType="text"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="1">

        <TextView
            android:id="@+id/txtResult"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#ff0000"
            android:hint="0"/>

    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:gravity="bottom"
        android:layout_height="0dp"
        android:layout_weight="4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn7"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/calBtn"
                android:text="@string/so_7"/>
            <Button
                android:id="@+id/btn8"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/calBtn"
                android:text="@string/so_8"/>
            <Button
                android:id="@+id/btn9"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/calBtn"
                android:text="@string/so_9"/>
            <Button
                android:id="@+id/btnCong"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/calBtn"
                android:text="@string/Cong"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn4"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/calBtn"
                android:text="@string/so_4"/>
            <Button
                android:id="@+id/btn5"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/calBtn"
                android:text="@string/so_5"/>
            <Button
                android:id="@+id/btn6"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/calBtn"
                android:text="@string/so_6"/>
            <Button
                android:id="@+id/btnTru"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/calBtn"
                android:text="@string/Tru"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/calBtn"
                android:text="@string/so_1"/>
            <Button
                android:id="@+id/btn2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/calBtn"
                android:text="@string/so_2"/>
            <Button
                android:id="@+id/btn3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/calBtn"
                android:text="@string/so_3"/>
            <Button
                android:id="@+id/btnNhan"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/calBtn"
                android:text="@string/Nhan"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn0"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/calBtn"
                android:text="@string/so_0"/>
            <Button
                android:id="@+id/btnPoint"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/calBtn"
                android:text="@string/Point"/>
            <Button
                android:id="@+id/btnResult"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/calBtn"
                android:text="@string/Bang"/>
            <Button
                android:id="@+id/btnChia"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/calBtn"
                android:text="@string/Chia"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btnClean"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                style="@style/calBtn"
                android:text="@string/Xoa"/>
            <Button
                android:id="@+id/btnCleanAll"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/calBtn"
                android:text="@string/XoaAC"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>